test generating code coverage report (#12)
* test generating code coverage report

* test

* test 3.0.0-M1

* return to delete surefire arguments

Co-authored-by: fenglinnorway <fenglin.han@outlook.com>